update trip replay

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -61,6 +61,10 @@
         <activity
             android:name=".TripDetailActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".replay.TripReplayActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
